--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ doks:
             image:
         nav:
             - item_name: Home
-              item_url: '/'
+              item_url: '/' # Note, this has been configured so that this is NOT relative to the baseurl. This is to allow shifting to a root homepage! 
     footer:
         content:
             logo:
