--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ doks:
             image:
         nav:
             - item_name: Home
-              item_url: '/' # Note, this has been configured so that this is NOT relative to the baseurl. This is to allow shifting to a root homepage! 
+              item_url: '/' # Note, this has been configured so that this is NOT relative to the baseurl. This is to allow shifting to a root homepage!
     footer:
         content:
             logo:
-                text: slanger
+                text: apcram
                 image:
             copyright: Copyright &copy; 2020. <br>All rights reserved.
         social_list:
